<resources>
    <string name="app_name">Ecobank Merchant</string>
    <string name="app_label">Ecobank Merchant Wallet</string>
    <string name="roboto_black">roboto_black.ttf</string>
    <string name="roboto_medium">roboto_medium.ttf</string>
    <string name="roboto_bold">roboto_bold.ttf</string>
    <string name="roboto_regular">roboto_regular.ttf</string>
    <string name="verdana">verdana.ttf</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_termid">Email</string>
    <string name="prompt_merchantid">Merchant ID</string>
    <string name="prompt_merchant_terminal_id">Merchant / Terminal ID</string>
    <string name="prompt_password">PIN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Merchant ID is invalid</string>
    <string name="error_invalid_merchant_id">This Merchant ID is invalid</string>
    <string name="activate_account_text">Activate Account</string>
    <string name="error_invalid_password">PIN must be 6 digits</string>
    <string name="error_incorrect_password">This PIN is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="enter_pin_for_reset">Enter PIN</string>
    <string name="reenter_pin_for_reset">Please Confirm PIN</string>
    <string name="error_invalid_reset_pin">PIN must be 6 digits</string>
    <string name="reset_pin_must_match">PINs entered do not match</string>
    <string name="activate_sign_in">Activate</string>
    <string name="title_activity_activate_account">Activate Account</string>
    <string name="loginactivityname">Log In</string>
    <string name="title_activity_accountactivation">Activate Account</string>
    <string name="title_activity_accountactivationotp">Confirm OTP</string>
    <string name="systemerror">Request failed, Please try Again!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_on_set_pin">An Error occurred while setting PIN</string>
    <string name="title_activity_home">Ecobank Merchant App</string>
    <string name="action_reset_pin">Reset your PIN</string>
    <string name="accountactivationotpprompt">One Time Password</string>
    <string name="activate_otp">Request OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_on_login_credentials">Error occured on logging you in, Please contact customer care!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setpassword">Set A PIN</string>
    <string name="prompt_password_otp_newpin">Please enter a new PIN</string>
    <string name="prompt_password_otp_confirm">Please confirm PIN</string>
    <string name="setnewpassword">Set a new PIN</string>
    <string name="setnewpasswordreconfirm">Reconfirm new PIN</string>
    <string name="accountconfirm">Confirm</string>
    <string name="error_invalid_pin">PIN entered is invalid</string>
    <string name="error_pin_required">PIN is Required</string>
    <string name="error_pin_too_short">PIN must be 6 digits</string>
    <string name="activate_account_button_label">Activate Account</string>
    <string name="reset_pin_button_label">Reset Your PIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reset_password">Reset PIN</string>
    <string name="title_activity_pay_notification">PayNotification</string>
    <string name="title_activity_notification_paid">Payment Notification</string>
    <string name="transaction_notification">Transaction Notification</string>
    <string name="transaction_notification_success_status">Success</string>
    <string name="transaction_notification_failure_status">Failure</string>
    <string name="transaction_notification_reverse_status">Reversal</string>
    <string name="notificationterminalid">Terminal ID</string>
    <string name="notificationpredescription">A Payment of</string>
    <string name="notificationpostdescription">has been made to you</string>
    <string name="notificationpostrefunddescription">has been refunded by you</string>
    <string name="notificationref">908833848848483</string>
    <string name="notificationok">OK</string>
    <string name="notificationmenu">Generate Notification</string>
    <string name="title_activity_change_password">Change Your PIN</string>
    <string name="change_password_title">Change Account PIN</string>
    <string name="prompt_old_pin_change">Enter your old PIN</string>
    <string name="prompt_new_pin_change">Enter a new PIN</string>
    <string name="prompt_reenter_new_pin_change">Re-enter your new PIN</string>
    <string name="change_pin">Confirm PIN Change</string>
    <string name="dynamicqrcode">Generate Dynamic QR Code</string>
    <string name="view_trn_title">View Transactions</string>
    <string name="end_dt_field">End Date</string>
    <string name="start_dt_field">Start Date</string>
    <string name="fetch_trn">Fetch Transactions</string>
    <string name="logout_title">Log Out</string>
    <string name="trn_title">Transactions</string>
    <string name="genqr_code_title">Generate QR Code</string>
    <string name="mv_menu_title">MVisa</string>
    <string name="mp_menu_title">Masterpass</string>
    <string name="descrption_text">Accessories for Digital Marketing Show</string>
    <string name="refund_title">Refund</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="date_title">DATE</string>
    <string name="currency_title">GHS</string>
    <string name="transaction_detail_title">Transaction Detail</string>
    <string name="invoice_no">Invoice No (optional)</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_tip">Tip (optional)</string>
    <string name="action_generate_qr">Generate QR Code</string>
    <string name="masterpass_title">SIMPLY SCAN TO PAY</string>
    <string name="title_activity_reset_pin_merchant_input">Reset PIN</string>
    <string name="title_activity_reset_pin_otpinput">Reset PIN</string>
    <string name="end_dt_time_field">Time Period</string>
    <string name="title_activity_success">Success</string>
    <string name="title_activity_samplebasic">samplebasic</string>
    <string name="title_activity_disabledmerchant">disabledmerchant</string>
    <string name="tryagain">Please Try Again</string>
    <string name="searchagain">Please Refine your search</string>
    <string name="networkfailtryagain">A communication failure occured! Please check the Network</string>
    <string name="datetimeswitch">Time Search</string>
    <string name="notransactions">No Transactions Found</string>
    <string name="no_txn_found">No Transactions Found</string>
    <string name="upgradeversion">A newer version of this App is available. Please visit the Ecobank Merchant Portal to download!</string>
    <string name="err_processing">An error occurred during processing, Please try Again!</string>
    <string name="err_occurred">Please refine your search and try again.</string>
    <string name="merchanttitle">ECOBANK MERCHANT</string>
</resources>
