<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.livespace.com.ecobankmerchant.NewDynamicQR">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <EditText
            android:id="@+id/invoiceno"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invoice_no"
            android:inputType="number"
            android:maxLines="1"

            android:singleLine="true" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_amount"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:layout_marginTop="110dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tip"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:layout_marginTop="150dp"
            android:singleLine="true" />

        <Button

            android:id="@+id/generateqrbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:paddingTop="5dp"
android:layout_marginTop="210dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dynamicqrcode"
            android:textAppearance="?android:textAppearanceSmall"
            android:gravity="center"
            android:textColor="@color/buttonwhite"
            android:layout_gravity="center"
            android:drawablePadding="5dp"

            tools:ignore="MissingPrefix"
            android:background="@drawable/myactivatebutton"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="256dp"
            android:src="@drawable/masterpasslogowebportal"/>
        <View android:id="@+id/primerdivisor"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="291dp"
            android:layout_width="350dp"
            android:background="#000000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masterpass_title"
            android:textSize="15dp"

            android:textStyle="bold"
            android:layout_marginTop="300dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/usermsg"/>
        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:id="@+id/qrcode"
            android:layout_marginTop="330dp"
            android:background="@drawable/actualexportedqrcode"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|top"/>

        <View android:id="@+id/lowerdivisor"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="560dp"
            android:layout_width="350dp"
            android:background="#000000"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mplogo"
            android:layout_below="@+id/lowerdivisor"
            android:src="@drawable/mplogothree"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|bottom"/>
    </RelativeLayout>


</FrameLayout>
