<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="android.livespace.com.ecobankmerchant.DynamicQrcode">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
     <EditText
                android:id="@+id/invoiceno"
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoice_no"
                android:inputType="number"
                android:maxLines="1"

                android:singleLine="true" />





            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_amount"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:layout_marginTop="110dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_tip"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:layout_marginTop="150dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/qr_generate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:text="@string/action_generate_qr"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="MissingPrefix"
                android:textColor="@color/buttonwhite"
                android:background="@drawable/myactivatebutton"
                />

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View android:id="@+id/upperdivisor"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:layout_width="350dp"
            android:background="#000000" />

       <!-- <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/qrimage"
            android:layout_marginTop="260dp"
            android:background="@drawable/ic_crop_free_black_24dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:paddingBottom="0dp"
            />
-->
        <ImageView

            android:layout_width="210dp"
            android:layout_height="210dp"
            android:id="@+id/qrcode"
            android:layout_marginTop="300dp"
            android:background="@drawable/ecobanklogologin"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|top" />

        <View android:id="@+id/lowerdivisor"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="560dp"
            android:layout_width="350dp"
            android:background="#000000" />
    </RelativeLayout>

</FrameLayout>
