<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:layout_marginTop="20dp"
    android:paddingBottom="40dp">
<TextView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/splash_blue"
    android:drawableLeft="@drawable/ic_credit_card_black_24dp"
    android:drawableTint="@color/accent"
    android:textSize="25dp"
    android:text="@string/transaction_detail_title"
    android:id="@+id/stmttitle"/>

    <TextView
        android:drawableTint="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:paddingLeft="80dp"
        android:paddingRight="10dp"
        android:textColor="@color/splash_blue"
        android:id="@+id/narrationtext"
        android:text="Accessories for Digital Marketing Show" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:drawableTint="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:id="@+id/currsym"
        android:textColor="@color/accent"
        android:text="@string/currency_title" />
        <TextView

    android:drawableTint="@color/accent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
            android:paddingLeft="52dp"
    android:textSize="14dp"
    android:textColor="@color/splash_blue"
    android:text="1000.00" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:id="@+id/datesym"
            android:textColor="@color/accent"
            android:text="@string/date_title" />
        <TextView

            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:paddingLeft="50dp"
            android:textColor="@color/splash_blue"
            android:text="03-DEC-2016" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:id="@+id/narrsym"
            android:textColor="@color/accent"
            android:text="@string/description_title" />
        <TextView

            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textSize="14dp"
            android:textColor="@color/splash_blue"
            android:text="@string/descrption_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:id="@+id/typesym"
            android:textColor="@color/accent"
            android:text="TYPE" />
        <TextView

            android:drawableTint="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="10dp"
            android:textSize="14dp"
            android:textColor="@color/splash_blue"
            android:text="CREDIT" />
    </LinearLayout>
    <!--
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:orientation="horizontal">
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:drawableTint="@color/splash_blue"
        android:drawableLeft="@drawable/ic_rotate_left_black_24dp"
        android:text="@string/refund_title"
        android:textColor="@color/splash_blue"
        android:textSize="14dp"
        android:id="@+id/refundbutton"
        android:background="@drawable/myactivatebutton"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:drawableTint="@color/splash_blue"
        android:drawableLeft="@drawable/ic_check_box_black_24dp"
        android:text="@string/notificationok"
        android:textColor="@color/splash_blue"
       android:layout_marginLeft="20dp"
        android:textSize="14dp"
        android:id="@+id/okbutton"
        android:background="@drawable/myactivatebutton"/>

</LinearLayout>
 -->
</LinearLayout>